modified:   page_analyzer/templates/index.html

--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1>Привет, мир!</h1>
+        <h1>Привет, hexlet!</h1>
         <p>Это мой первый шаблон Flask с подключенным Bootstrap.</p>
     </div>
 </body>
