--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Third project for Hexlet.io">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Анализатор страниц</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1>Привет, hexlet!</h1>
-        <p>Это мой первый шаблон Flask с подключенным Bootstrap.</p>
-    </div>
-<form action="/add_url" method="post">
-    <label for="url">Введите URL:</label>
-    <input type="text" id="url" name="url" required maxlength="255">
-    <button type="submit">Добавить</button>
+  </head>
+  <body class="min-vh-100 d-flex flex-column">
+  <header class="flex-shrink-0">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
+  <a class="navbar-brand" href="/">Анализатор страниц</a>
+  <div id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link " href="/urls">Сайты</a></li>
+      </ul>
+    </ul>
+  </div>
+</nav>
+
+  </header>
+  
+  
+
+  <main class="flex-grow-1">
+    <div class="container-lg mt-3">
+      <h1></h1>
+
+    
+<div class="row">
+  <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+    <h1 class="display-3">Анализатор страниц</h1>
+    <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
+    <form action="/urls " method="post" class="d-flex justify-content-center" required>
+    <input type="text" name="url" placeholder="https://www.example.com"value=""  class="form-control form-control-lg">
+    <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
 </form>
+  </div>
+</div>
+
+    </div>
+  </main>
 </body>
 </html>
