--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Список URL</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Third project for Hexlet.io">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>Анализатор страниц</title>
 </head>
-<body>
-    <div class="container">
-        <h1>Список URL</h1>
-        <table class="table" data-test="urls">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>URL</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for url in urls %}
-                    <tr data-test="url">
-                        <td>{{ url[0] }}</td>
-                        <td><a href="{{ url_for('show_url', url_id=url[0]) }}">{{ url[1] }}</a></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+<body class="min-vh-100 d-flex flex-column">
+    <header class="flex-shrink-0">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
+            <a class="navbar-brand" href="/">Анализатор страниц</a>
+            <div id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link " href="/urls">Сайты</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+  
+    <main class="flex-grow-1">
+        <div class="container-lg mt-3">
+            <h1>Сайты</h1>
+    
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover text-nowrap" data-test="urls">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Имя</th>
+                            <th>Последняя проверка</th>
+                            <th>Код ответа</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for url in urls %}
+                            <tr data-test="url">
+                                <td>{{ url[0] }}</td>
+                                <td>
+                                    <a href="{{ url_for('show_url', url_id=url[0]) }}">
+                                        {{ url[1] }}
+                                    </a>
+                                </td>
+                                <td>{{ url[2] }}</td>
+                                <td>{{ url[3] }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </main>
+  
+    <footer class="border-top py-3 mt-5 flex-shrink-0">
+        <div class="container-lg">
+            <div class="text-center">
+                <a href="https://ru.hexlet.io/" target="_blank">Hexlet</a>
+            </div>
+        </div>
+    </footer>
+  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
