--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -21,35 +21,32 @@
   
     <main class="flex-grow-1">
         <div class="container-lg mt-3">
-            <h1>Сайт: {{ url[1] }}</h1>
-    
+            <h1>Сайт: {{ url.name }}</h1>
             <div class="table-responsive">
-                <table class="table table-bordered table-hover text-nowrap" data-test="url">
+                <table class="table table-bordered table-hover table-nowrap" data-test="url">
                     <tbody>
                         <tr>
                             <td>ID</td>
-                            <td>{{ url[0] }}</td>
+                            <td>{{ url.id }}</td>
                         </tr>
                         <tr>
                             <td>Имя</td>
-                            <td>{{ url[1] }}</td>
+                            <td>{{ url.name }}</td>
                         </tr>
                         <tr>
                             <td>Дата создания</td>
-                            <td>{{ url[2] }}</td>
+                            <td>{{ url.created_at }}</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-    
             <h2 class="mt-5 mb-3">Проверки</h2>
-            <form method="post" action="/urls/{{ url[0] }}/checks">
+            <form method="post" action="/urls/{{ url.id }}/checks">
                 <input type="submit" class="btn btn-primary" value="Запустить проверку">
             </form>
-    
             <div>
                 <table class="table table-bordered table-hover mt-2" data-test="checks">
-                    <thead>
+                    <tbody>
                         <tr>
                             <th>ID</th>
                             <th>Код ответа</th>
@@ -58,13 +55,19 @@
                             <th>description</th>
                             <th>Дата создания</th>
                         </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Здесь будут данные о проверках URL -->
+                        {% for check in checks %}
+                        <tr>
+                            <td>{{ check.id }}</td>
+                            <td>{{ check.status_code }}</td>
+                            <td>{{ check.h1 }}</td>
+                            <td>{{ check.title }}</td>
+                            <td>{{ check.description }}</td>
+                            <td>{{ check.created_at }}</td>
+                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
-    
         </div>
     </main>
   
