--- a/page_analyzer/templates/base.html
+++ b/page_analyzer/templates/base.html
@@ -9,7 +9,7 @@
 </head>
 <body class="min-vh-100 d-flex flex-column">
   <header class="flex-shrink-0">
-      <nav class="navbar navbar-dark navbar-expand-md px-3" style="background-color: #36017A">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
           <a class= "navbar-brand text-white" href="/">Анализатор страниц</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
