--- a/page_analyzer/templates/url.html
+++ b/page_analyzer/templates/url.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+{% with messages = get_flashed_messages(with_categories=True) %}
   {% if messages %}
+    <div class="alert alert-danger">
       {% for category, message in messages %}
-          <div class="alert {{ category }}" role="alert">{{ message }}</div>
+        {{ message }}
       {% endfor %}
+    </div>
   {% endif %}
+{% endwith %}
   <main class="flex-grow-1">
       <div class="container-lg mt-3">
           <h1>Сайт: {{ url.name }}</h1>
