--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -5,22 +5,24 @@
           <h1>Сайты</h1>
           <div class="table-responsive">
               <table class="table table-bordered table-hover table-nowrap" data-test="urls">
-                  <thead>
-                      <tr>
-                          <th>ID</th>
-                          <th>Имя</th>
-                          <th>Последняя проверка</th>
-                          <th>Код ответа</th>
-                      </tr>
-                  </thead>
                   <tbody>
+                  <tr>
+                      <th>ID</th>
+                      <th>Имя</th>
+                      <th>Последняя проверка</th>
+                      <th>Код ответа</th>
+                  </tr>
                   {% for url in urls %}
-                      <tr>
-                          <td>{{ url.id }}</td>
-                          <td><a href="{{ url_for('get_one_url', id=url.id) }}">{{ url.name }}</a></td>
-                          <td>{{ check.created_at if check.created_at is not none }}</td>
-                          <td>{{ check.status_code if check.status_code is not none }}</td>
-                      </tr>
+                      {% for check in last_check %}
+                          {% if check.id == url.id %}
+                  <tr>
+                      <td>{{ url.id }}</td>
+                      <td><a href="{{ url_for('get_one_url', id=url.id) }}">{{ url.name }}</a></td>
+                      <td>{{ check.created_at if check.created_at is not none }}</td>
+                      <td>{{ check.status_code if check.status_code is not none  }}</td>
+                  </tr>
+                          {% endif %}
+                      {% endfor %}
                   {% endfor %}
                   </tbody>
               </table>
