--- a/page_analyzer/templates/urls.html
+++ b/page_analyzer/templates/urls.html
@@ -13,14 +13,12 @@
                       <th>Код ответа</th>
                   </tr>
                   {% for url in urls %}
-                      {% for check in last_check %}
                   <tr>
-                      <td>{{ url.id }}</td>
-                      <td><a href="{{ url_for('get_one_url', id=url.id) }}">{{ url.name }}</a></td>
-                      <td>{{ check.created_at if check.created_at is not none }}</td>
-                      <td>{{ check.status_code if check.status_code is not none  }}</td>
+                    <td>{{ url.id }}</td>
+                    <td><a href="{{ url_for('get_one_url', id=url.id) }}">{{ url.name }}</a></td>
+                    <td>{{ url.created_at if url.created_at is not none }}</td>
+                    <td>{{ url.status_code if url.status_code is not none  }}</td>
                   </tr>
-                      {% endfor %}
                   {% endfor %}
                   </tbody>
               </table>
