--- a/page_analyzer/templates/error.html
+++ b/page_analyzer/templates/error.html
@@ -1,11 +1,17 @@
 {% extends "base.html" %}
-{% block title %}Page Not Found{% endblock %} 
-{% block content %} 
+{% block title %}Page Not Found{% endblock %}
+{% block content %}
 <main class="flex-grow-1">
   <div class="container-lg mt-3">
-    <h2>{{ message }}</h2>
+    {% if error.code == 404 %}
+      <h2>Страница не найдена!</h2>
+    {% elif error.code == 500 %}
+      <h2>Внутренняя ошибка сервера.</h2>
+    {% else %}
+      <h2>Неизвестная ошибка</h2>
+    {% endif %}
     <p>Приносим извинения за причиненные неудобства.</p>
     <a href="{{ url_for('index') }}">Перейти на главную страницу</a>
   </div>
 </main>
-{% endblock %} 
+{% endblock %}
