--- a/page_analyzer/templates/error/404.html
+++ b/page_analyzer/templates/error/404.html
@@ -5,8 +5,8 @@
 {% block content %}
   <main class="flex-grow-1">
     <div class="container-lg mt-3">
-      <h2>{{ message }}</h2>
-      <p>Приносим извинения за возможные неудобства.</p>
+      <h2>{{ error.code }}</h2>
+      <p>Страница не найдена</p>
       <a href="{{ url_for('index') }}">Перейти на главную страницу</a>
     </div>
   </main>
